Corrected Thesis Submitted

--- a/BackgroundERTMS.tex
+++ b/BackgroundERTMS.tex
@@ -818,7 +818,7 @@ We shall now describe the behaviour of trains and their interaction with the ERT
 \draw[-](2, -1) -- node[above, font = \small]{Points Ack} (4, -1); 
 \draw[->](0,-0.5) -- node[above, font = \small]{} (4, -0.5);
 \draw[<-](0, -1) -- node[above, font = \small]{} (4, -1);  
-\draw[-](0,-1.5) -- node[above, font = \small]{MA A $\to$ B} (2, -1.5);
+\draw[-](0,-1.5) -- node[above, font = \small]{MA F $\to$ C} (2, -1.5);
 \draw[->](0,-1.5) -- node[above, font = \small]{} (10, -1.5);
 \draw[-](0,-2) -- node[above, font = \small]{MA Ack} (2,-2);
 \draw[<-](0,-2) -- (10,-2);
