--- a/BackgroundTrad.tex
+++ b/BackgroundTrad.tex
@@ -207,7 +207,7 @@ topology of the railway a more detailed description can be found in \cite{KR01}
 
 \subsubsection{Track Segments}
 
-In Fig. \ref{fig:track}  there are 4 track segments $A,B,C,D$ which is typical of a junction containing a single point. Each track segment contains a track circuit for the purpose of detecting whether it is occupied by a train or not. When a train is present on a segment of track the metal wheels and axle complete the circuit and allow the control system to detect its presence. It is possible for a train to be longer than a track segment and this is particularly the case at junctions and other areas where a large amount of control is needed over trains. A shorter track segment allows for a finer grain view of the railway by the interlocking and control system and can allow for a greater throughput of trains. Conversely the length of track segments can be far longer on long straight segments of track without any interesting features such as junctions or stations.
+In Figure~\ref{fig:track}  there are 4 track segments $A,B,C,D$ which is typical of a junction containing a single point. Each track segment contains a track circuit for the purpose of detecting whether it is occupied by a train or not. When a train is present on a segment of track the metal wheels and axle complete the circuit and allow the control system to detect its presence. It is possible for a train to be longer than a track segment and this is particularly the case at junctions and other areas where a large amount of control is needed over trains. A shorter track segment allows for a finer grain view of the railway by the interlocking and control system and can allow for a greater throughput of trains. Conversely the length of track segments can be far longer on long straight segments of track without any interesting features such as junctions or stations.
 
 \begin{comment}
 A section of track is typically broken down into track segments each
@@ -220,7 +220,7 @@ where control over train movement is of greater importance.
 
 
 \subsubsection{Points}
-Junctions are formed between two tracks using  pieces of equipment called points. The wheels of the train rest on track which makes it physically impossible to just join one track to another as the train would derail.  What is needed is a device that can switch a train off of the track and the point fulfils that role.  Each point can be in one of two positions depending on whether it is actively switching trains off the track which is referred to as \textbf{reverse}  or is inactive which is referred to as \textbf{normal}. The point is one of the main areas of possible danger on the railway. If a train hits the point when it is in the wrong position i.e. from the direction of track segment $B$ to $C$ in Fig. \ref{fig:track} then the train will derail. There is also a serious danger posed by point moving while a train is on the junction which would also cause a derailment.
+Junctions are formed between two tracks using  pieces of equipment called points. The wheels of the train rest on track which makes it physically impossible to just join one track to another as the train would derail.  What is needed is a device that can switch a train off of the track and the point fulfils that role.  Each point can be in one of two positions depending on whether it is actively switching trains off the track which is referred to as \textbf{reverse}  or is inactive which is referred to as \textbf{normal}. The point is one of the main areas of possible danger on the railway. If a train hits the point when it is in the wrong position i.e. from the direction of track segment $B$ to $C$ in Figure~ \ref{fig:track} then the train will derail. There is also a serious danger posed by point moving while a train is on the junction which would also cause a derailment.
 
 \begin{comment}
 A point is a physical piece of equipment that is used to 
@@ -228,7 +228,7 @@ form a junction. Due to the nature of the rails and trains it is not possible to
 to just join two segments of track. Instead a point is needed to act as
 physical switch controlling the flow of trains through a junction. A point
 has two positions which are referred to as \textbf{normal} and
-\textbf{reverse}. This presents a safety hazard, for example (See Fig. \ref{fig:track}), if a train enters
+\textbf{reverse}. This presents a safety hazard, for example (See Figure \ref{fig:track}), if a train enters
 the junction $B$ from $C$ when the junction is locked in the
 position for normal then the train will be derailed. 
 \end{comment}
@@ -277,7 +277,7 @@ aspects used for a three light signal.
 
 \begin{description}
 
-\item[Red] -  This instructs the driver to stop at this signal and wait for further instructions as the track ahead is not clear  (Fig \ref{fig:aspects} (a)). 
+\item[Red] -  This instructs the driver to stop at this signal and wait for further instructions as the track ahead is not clear  (See Figure~\ref{fig:aspects} (a)). 
 
 
 \item[Yellow] - This signal instructs the driver to proceed with caution as although the track ahead is clear the next signal may be a red one which would require the driver to stop (Fig \ref{fig:aspects} (b)).
@@ -458,7 +458,7 @@ is as follows:
 \medskip
 
 The semantics of a given ladder logic rung is determined by the entities and the connections between them.  The horizontal and vertical connections have separate meanings and each will compute a different result for the coil connected to them.
-Semantically these graphical connectives can be viewed as connectives in propositional logic. The horizontal connector represents a conjunction of the two variables it connects and a vertical connection represents disjunction between two variables (See Fig. \ref{fig:ladderconnectives}.).
+Semantically these graphical connectives can be viewed as connectives in propositional logic. The horizontal connector represents a conjunction of the two variables it connects and a vertical connection represents disjunction between two variables (See Figure \ref{fig:ladderconnectives}.).
 
 
 \begin{comment}
@@ -467,7 +467,7 @@ them. The shapes of the connections between the contacts determines how the
 value of the coil is computed from them. Using propositional logic for comparison,  
 a horizontal connection between two contacts represents logical conjunction
 and a vertical connection between two contacts represents logical
-disjunction (See Fig. \ref{fig:ladderconnectives}.). 
+disjunction (See Figure \ref{fig:ladderconnectives}.). 
 \end{comment}
 
 \medskip
