--- a/ECLSA.tex
+++ b/ECLSA.tex
@@ -120,7 +120,7 @@ of two rules:
 \end{mydef}
 
 %
-The modified unit resolution proof system contains additional subsumption rules  and arguments in order to implement a form of clause learning. When a conflict is reached a clause is learned representing the decision assignments which caused the conflict in that clause to occur similar to the GRASP algorithm \cite{MS99}. In the case of Example \ref{example:conflictgraph} (See Section \ref{sec:CDCLalgos}) the learned clause would be $( \neg x_1 \vee \neg x_7 )$. Above the derivation turnstile the formula and valuation from which subsumptions can be made is stored. The decision ($\Split$) assignments used to derive the clause are stored on the left hand side of the derivability sign. This are added during an application of the $\SplitSub$ rule which subsumes a decision assignment from the valuation to form a unit clause. Applications of the $\UnitSub$ and $\Sub$ rules do not cause decisions to be added to this valuation. The $\Sub$ rule is more or less unchanged semantically as it allows one to subsume an extension of a clause in the formula $\Delta$, however it has changed syntactically to fit the structure of the modified proof system. \\
+The modified unit resolution proof system contains additional subsumption rules  and arguments in order to implement a form of clause learning. When a conflict is reached a clause is learned representing the decision assignments, which caused the conflict in that clause to occur, similar to the GRASP algorithm \cite{MS99}. In the case of Example \ref{example:conflictgraph} (See Section \ref{sec:CDCLalgos}) the learned clause would be $( \neg x_1 \vee \neg x_7 )$. Above the derivation turnstile the formula and valuation from which subsumptions can be made is stored. The decision ($\Split$) assignments used to derive the clause are stored on the left hand side of the derivability sign. This are added during an application of the $\SplitSub$ rule which subsumes a decision assignment from the valuation to form a unit clause. Applications of the $\UnitSub$ and $\Sub$ rules do not cause decisions to be added to this valuation. The $\Sub$ rule is more or less unchanged semantically as it allows one to subsume an extension of a clause in the formula $\Delta$, however it has changed syntactically to fit the structure of the modified proof system. \\
 \medskip
 \begin{mydef}[Modified Unit Resolution Proof System] The modified unit resolution proof system consists of four rules:
 \begin{center}
@@ -703,7 +703,7 @@ We modelled the completeness statement of this solver using Minlog's built in in
 
 This results in the output seen in Code Listing \ref{cl:cdclphp32}.  We see that the solver has learned two clauses. The clause \texttt{(CC (Neg (Variable 32)):)} comes from the first branch of the proof where the literal \texttt{(Pos (Variable 32))} was used in an application of the $\Split$ rule. This learned unit clause was then used in subsequent unit resolution derivations of the second branch of the proof resulting in the empty clause \texttt{CC(Nil lit)} being learned.  This use of the unit clauses before assignments from the $\Split$ rule results in shorter learned clauses which better aid the subsequent proof search.
 \newpage
-\begin{lstlisting}[caption = The Modified DPLL Proof that PHP(3,2) is unsatisfiable, label = cl:cdclphp32] 
+\begin{lstlisting}[caption = {The Modified DPLL Proof that PHP(3,2) is unsatisfiable}, label = cl:cdclphp32] 
 (InR for@@algmodDPLL (lit=>boole)@@(cla=>lit))
 (CF(CC(Nil lit)::(CC(Neg(Variable 32)):):)@
 CmodDPLLTwo(Pos(Variable 32))
