--- a/Hybridautomata.tex
+++ b/Hybridautomata.tex
@@ -4,7 +4,7 @@
 The ERTMS system will be central to many train control systems in the future and ensuring that it is safe is of paramount importance. It poses a particular challenge due to the fact that the system is specified at a high level with each individual country having its own particular implementation. One aspect that is particularly problematic and loosely specified is the interface between the existing interlocking and the RBC as both of these systems have a role to play in ensuring safety. In the following chapter we shall look at formalising the ERTMS system whilst capturing the behaviour of this critical interface between the two systems. 
 %
 \section{Pentagon Case Study}
-The following is a simple example railway we shall use for the purposes of demonstrating our verification approach.  It contains five track segments connected to form a pentagon with two trains. This captures most of the behaviours found in a larger more complicated railway as the trains and control systems view any piece of track as a set of track segments joined together to form a route. We have modelled  a simple implementation of the ERTMS system controlling  a small example railway in the shape of a pentagon (see Figure \ref{fig:pentagon2}) using three hybrid automata (see section \ref{sec:hybrid}). In this example the value $D$ represents the distance from the start point at time $t$. It contains two trains $A$ and $B$ and five track circuits $l_0, \ldots , l_4$. The track is uni-directional allowing trains to travel from $0 - 249$. 
+The following is a case study of a simple railway we shall use for the purposes of demonstrating our verification approach.  It contains five track segments connected to form a pentagon with two trains. This captures most of the behaviours found in a larger more complicated railway as the trains and control systems view any piece of track as a set of track segments joined together to form a route. We have modelled  a simple implementation of the ERTMS system controlling  a small railway in the shape of a pentagon (see Figure \ref{fig:pentagon2}) using three hybrid automata (see section \ref{sec:hybrid}). In this example the value $D$ represents the distance from the start point at time $t$. It contains two trains $A$ and $B$ and five track circuits $l_0, \ldots , l_4$. The track is uni-directional allowing trains to travel from $0 - 249$. 
 \medskip
 %
 \begin{figure} [h!]
@@ -82,7 +82,7 @@ Since this is a first attempt at modelling a complex system we make several assu
 
 \item The positioning systems on the train are assumed to function at all times, constantly providing the radio block processor with correct information regarding the location of the train.
 
-\item We only allow movement authority extensions of one track segment in distance (50 in the pentagon example).
+\item We only allow movement authority extensions of one track segment in distance (50 in the pentagon case study).
 
 \item We do not allow movement authorities to be revoked.
 
@@ -93,7 +93,7 @@ Since this is a first attempt at modelling a complex system we make several assu
 \item In an open track plan a train will be allowed to enter as the separation policy allows.
 \end{enumerate}
 %
-The assumption regarding the acceleration causes the speed to be a linear function of time and greatly simplifies the laws of motion needed to compute the braking curves.   We do not allow movement authorities to be revoked for two reasons; the first is that it makes the verification of safety properties far more difficult and the second is that the model we have is quite simple and the pentagon example does not contain any situations which would cause a movement authority to be revoked.
+The assumption regarding the acceleration causes the speed to be a linear function of time and greatly simplifies the laws of motion needed to compute the braking curves.   We do not allow movement authorities to be revoked for two reasons; the first is that it makes the verification of safety properties far more difficult and the second is that the model we have is quite simple and the pentagon case study does not contain any situations which would cause a movement authority to be revoked.
 %
 \section{Modelling ERTMS Using Hybrid Automata} \label{sec:hybrid}
 One formalism which we can use to reason about systems such as ERTMS is hybrid automata \cite{TH96}. We shall give a theoretical overview of hybrid automata before formalising ERTMS as three hybrid automata composed in parallel. A hybrid automaton has discrete states called control modes and transitions between these modes called control switches. These control switches are triggered by either some condition on variables or by some event occurring. These events can either occur in some other automaton or they can be fired by an automaton due to some condition being met. The continuous transitions of the automaton are described by dotted variables\footnote{The dotted variables represent the rate of change of a given variable over time i.e. $\dot{y}$ denotes the derivative of $y$  $\dot{y} = \frac{dy}{dt}$. This notation was introduced by Newton \cite{CF28}.} and occur continually over time.
@@ -434,7 +434,7 @@ We define a hybrid automaton $H_{IL}$ as follows:
 \end{comment}
 
 \subsection{Radio Block Processor Automata}
-Similarly to the train automaton the RBC automaton also has four control modes namely $Granted$, $Idle$, $Wait$ and $Ready \, to \, Request$. Initially the system is in an idle state where the system waits until it receives a movement authority request MA.Req.x. When the train receives such a movement authority request the LastTrain variable is assigned to be x and the system moves to the $Ready \, to \, Request$ state.  From this state the train sends a request for the next track segment of the $LastTrain$. In the following definition we have defined the initial state of the RBC for the pentagon example with the initial positions of the trains A and B being $0$ and $150$ and their movement authorities being $49$ and $199$ respectively. The state of the RBC automaton consists of two sets of variables $EoA_1, Pos_1$ and $EoA_2, Pos_2$ that each correspond to one of the trains in the example.
+Similarly to the train automaton the RBC automaton also has four control modes namely $Granted$, $Idle$, $Wait$ and $Ready \, to \, Request$. Initially the system is in an idle state where the system waits until it receives a movement authority request MA.Req.x. When the train receives such a movement authority request the LastTrain variable is assigned to be x and the system moves to the $Ready \, to \, Request$ state.  From this state the train sends a request for the next track segment of the $LastTrain$. In the following definition we have defined the initial state of the RBC for the pentagon case study with the initial positions of the trains A and B being $0$ and $150$ and their movement authorities being $49$ and $199$ respectively. The state of the RBC automaton consists of two sets of variables $EoA_1, Pos_1$ and $EoA_2, Pos_2$ that each correspond to one of the trains in the example.
 \medskip
 
 \begin{mydef}[Radio Block Controller Hybrid Automaton]
@@ -522,7 +522,7 @@ Safety conditions for the combined system can be separated into discrete and con
 \end{figure}
 
 \subsection*{Inter-automaton Communication}
-The message sequence diagram Figure \ref{fig:SeqChart2} shows the communication between the RBC, interlocking and Train 1 from the pentagon example. The aim of this diagram is to provide the reader with a feel for how events are used to capture messaging and the passing of information between the automata. Train 1 is initially 1 unit of distance from the start of the track.  Train 1 initially sends position updates to the RBC until it reaches its braking point, at which time it will request a movement authority the RBC. The first position update is the event Train.1.Pos.1 where the train ID and the position have both been instantiated with 1.  The RBC will then request the next track segment for the train, which in this case is immediately granted. The RBC then sends the train its new movement authority using an event with train ID 1 and the end of authority instantiated with 99. Some of the position updates have been omitted from the diagram.
+The message sequence diagram Figure \ref{fig:SeqChart2} shows the communication between the RBC, interlocking and Train 1 from the pentagon case study. The aim of this diagram is to provide the reader with a feel for how events are used to capture messaging and the passing of information between the automata. Train 1 is initially 1 unit of distance from the start of the track.  Train 1 initially sends position updates to the RBC until it reaches its braking point, at which time it will request a movement authority the RBC. The first position update is the event Train.1.Pos.1 where the train ID and the position have both been instantiated with 1.  The RBC will then request the next track segment for the train, which in this case is immediately granted. The RBC then sends the train its new movement authority using an event with train ID 1 and the end of authority instantiated with 99. Some of the position updates have been omitted from the diagram.
 \begin{figure} [h!]
 
 \begin{center}
