--- a/verifyertms.tex
+++ b/verifyertms.tex
@@ -2,9 +2,9 @@
 \chaptermark{Simulating and Verifying ERTMS using Real Time Maude}
 
 
-In the following we describe how the Real Time Maude tool can be used to analyse the performance and safety of the ERTMS system by both simulation and verification using the Maude LTL model checker (The modelling of ERTMS in Real Time Maude was describe in Chapter~\ref{chap:modelertms}).  We begin by presenting the simulation of the pentagon example which demonstrates a situation where a slow train is held up by a faster train. Secondly we look at applying model checking to both the pentagon example and the junction example. The safety properties verified for the pentagon example relate to the safety condition "The movement authorities of the two trains do not overlap" whilst the properties for the junction example relate to the safety condition "The point does not move when it is in a train's movement authority". We also modified the pentagon example to use more realistic distances (See Section~\ref{sec:executionofltlchecker}). 
+In the following we describe how the Real Time Maude tool can be used to analyse the performance and safety of the ERTMS system by both simulation and verification using the Maude LTL model checker (The modelling of ERTMS in Real Time Maude was describe in Chapter~\ref{chap:modelertms}).  We begin by presenting the simulation of the pentagon case study which demonstrates a situation where a slow train is held up by a faster train. Secondly we look at applying model checking to both the pentagon case study and the junction case study. The safety properties verified for the pentagon case study relate to the safety condition "The movement authorities of the two trains do not overlap" whilst the properties for the junction case study relate to the safety condition "The point does not move when it is in a train's movement authority". We also modified the pentagon case study to use more realistic distances (See Section~\ref{sec:executionofltlchecker}). 
 
-It is stated by its developers that Real Time Maude is not first and foremost a verification tool. This is due to some inherent limitations in LTL-model checking that hinder the verification of infinite state systems. We have, as in the sensor network example \cite{PO07}, only model checked a portion of the state space for the pentagon. This is however enough to have confidence in the correctness of the system with respect to a given safety condition. A larger portion of the state space could be model checked by removing non-determinism from the model making it more concrete. This has been done in the junction example where the radio block processor is modified in such a way that it processes movement authorities in one time step.
+It is stated by its developers that Real Time Maude is not first and foremost a verification tool. This is due to some inherent limitations in LTL-model checking that hinder the verification of infinite state systems. We have, as in the sensor network example \cite{PO07}, only model checked a portion of the state space for the pentagon. This is however enough to have confidence in the correctness of the system with respect to a given safety condition. A larger portion of the state space could be model checked by removing non-determinism from the model making it more concrete. This has been done in the junction case study where the radio block processor is modified in such a way that it processes movement authorities in one time step.
 
 
 \section{Simulating The Behaviour of ERTMS}
@@ -46,7 +46,7 @@ eq initialtrainstate2  = < train2 : Train | state : acc, dist : 150,
 \end{lstlisting}
 Like train1, train2 is also accelerating initially and has a speed of 0.  Unlike train1 it has a distance of 150, a movement authority of 199, it is in the 4th track segment number 3 and has a maximum speed of 7. Both trains have an acceleration of 1. 
 
-Using these initial states for the individual objects we can form the initial state for our pentagon example using the following command:
+Using these initial states for the individual objects we can form the initial state for our pentagon case study using the following command:
 \begin{lstlisting}
  eq initialstate2 = {initialtrainstate1 initialtrainstate2 
                          initialintstate2  initialrbcstate2} . 
@@ -100,7 +100,7 @@ Result ClockedSystem :
 \label{t1t2graph}
 \end{figure}
 
-The first graph (See Fig. \ref{t1graph}.) shows the speed and distance of train1 over time. The train spends the majority of its time at maximum speed however there is a slight decrease in speed when a movement authority is requested. The distance of the train increases in roughly a linear fashion. The second graph (See Fig. \ref{t2graph}.) shows the speed and distance of train2 over time. The train brakes repeatedly and at one position comes to a complete stop as it waits for the slower train to progress and exit its current track segment. The distance time graph shows this stop/start behaviour through a wavy appearance. The final graph (See Fig. \ref{t1t2graph}.) shows that there is a consistent distance between the two trains of at least one track segment. Due to the discretisation of time we have had to favour braking over accelerating in order for the train to stop behind its movement authority. The speed of the train decreases on a transition from accelerating or full speed states to a braking state but does not increase speed immediately on a transition from a braking to accelerating state. This behaviour can be see in the speed graph for train2 (See Fig. \ref{t2graph}.) where there are several sharp peaks where the maximum speed has only been in place for one time step. In contrast when the train transitions from braking to accelerating there is always a flat section of constant speed. These flat sections of constant speed also occur when the train is braking and the train jumps back into the accelerating state for one time step to ensure the train brakes as closely to the end of movement authority as possible.
+The first graph (See Figure \ref{t1graph}.) shows the speed and distance of train1 over time. The train spends the majority of its time at maximum speed however there is a slight decrease in speed when a movement authority is requested. The distance of the train increases in roughly a linear fashion. The second graph (See Figure \ref{t2graph}.) shows the speed and distance of train2 over time. The train brakes repeatedly and at one position comes to a complete stop as it waits for the slower train to progress and exit its current track segment. The distance time graph shows this stop/start behaviour through a wavy appearance. The final graph (See Figure \ref{t1t2graph}.) shows that there is a consistent distance between the two trains of at least one track segment. Due to the discretization of time we have had to favour braking over accelerating in order for the train to stop behind its movement authority. The speed of the train decreases on a transition from accelerating or full speed states to a braking state but does not increase speed immediately on a transition from a braking to accelerating state. This behaviour can be see in the speed graph for train2 (See Figure \ref{t2graph}.) where there are several sharp peaks where the maximum speed has only been in place for one time step. In contrast when the train transitions from braking to accelerating there is always a flat section of constant speed. These flat sections of constant speed also occur when the train is braking and the train jumps back into the accelerating state for one time step to ensure the train brakes as closely to the end of movement authority as possible.
 
 
 \section{The Maude Linear Temporal Logic Model Checker}
@@ -109,8 +109,7 @@ The Real Time Maude system employs the Maude LTL Model Checker, which does on-th
  
 
 \section{Model Checking the European Rail Traffic Management System}
-In the following section we will demonstrate an approach to apply the Real Time Maude LTL model checker to verify the Real Time Maude specification described previously.
-Firstly we shall define the property we want to check in the Real Time Maude system. To do this we have to define a satisfaction relation which describes what it means for the property to hold in a state of the system we are checking. The property we shall consider in this case is that the moment authorities of two trains in the system do not overlap. The logical property we define identifies the individual trains using their object identifiers and then computes whether or not an overlap has occurred using a Boolean formula.  We shall show that it is possible to verify this property over a time period large enough for all normal behaviours of the system to occur. 
+In the following section we will demonstrate an approach to apply the Real Time Maude LTL model checker to verify the Real Time Maude specification described previously. Firstly we shall define the property we want to check in the Real Time Maude system. To do this we have to define a satisfaction relation which describes what it means for the property to hold in a state of the system we are checking. The property we shall consider in this case is that the moment authorities of two trains in the system do not overlap. The logical property we define identifies the individual trains using their object identifiers and then computes whether or not an overlap has occurred using a Boolean formula.  We shall show that it is possible to verify this property over a time period large enough for all normal behaviours of the system to occur. 
 
 \subsection*{Defining a Satisfaction Relation}
 The syntax of the properties for which we are going to check using the LTL model checker are defined separately from the semantics in terms of a satisfaction relation.
@@ -135,7 +134,7 @@ eq {trackseg(REST)REST2} |= P = {REST REST2} |= P .
 
 \subsection*{Checking the  Correctness of the Specification}
 
-We have applied model checking to check several fundamental correctness properties of the pentagon example's behaviour. We begin by showing that it is not possible for a train to exceed its maximum speed. We formulate this as a model checking problem over the pentagon example.  We can check that a train has a certain speed as follows:
+We have applied model checking to check several fundamental correctness properties of the pentagon case study's behaviour. We begin by showing that it is not possible for a train to exceed its maximum speed. We formulate this as a model checking problem over the pentagon case study.  We can check that a train has a certain speed as follows:
 
 \begin{lstlisting}[caption = The speed property]
 op train-s : Oid Nat -> Prop [ctor] .
@@ -240,9 +239,9 @@ in MODEL-CHECK-ERTMS8
 Result Bool : true
 \end{lstlisting}
 
-Unfortunately the Maude LTL model checker cannot detect the congruence between difference configurations of control system. Therefore the state space is infinite and it is impossible to do un-timed model checking on the above model checking problem for the pentagon example. It is however possible to do timed model checking within a reasonable time limit that allows for all behaviours of the system to be verified. The junction example does not suffer from this problem as the state space is finite and, in addition, it has additional mechanisms to remove non-determinism from the model which dramatically cuts down on the state space.
+Unfortunately the Maude LTL model checker cannot detect the congruence between difference configurations of control system. Therefore the state space is infinite and it is impossible to do un-timed model checking on the above model checking problem for the pentagon case study. It is however possible to do timed model checking within a reasonable time limit that allows for all behaviours of the system to be verified. The junction study does not suffer from this problem as the state space is finite and, in addition, it has additional mechanisms to remove non-determinism from the model which dramatically cuts down on the state space.
 
-The following command is used to model check the safety property P1 for the junction example.
+The following command is used to model check the safety property P1 for the junction study.
 
 \begin{lstlisting}[caption = The model checking command the point does not move property]
 (mc initialstate1 |=u [] (pointma(train1) => pointnormal)  .)
@@ -266,7 +265,7 @@ P2 (Junction)& untimed & 6.636s \\
 \end{center}
 \medskip
 
-The no overlapping movement authorities safety property was verified using time bounded model checking over the modified realistic pentagon example with a track segment length of 25000,  segment length of 5000 and train speeds of 70 and 120.  We then applied the LTL model checker and verify this example so that a comparison can be performed between the two pentagon examples in terms of verification difficulty. The following table shows how the difficulty of the model checking problem increases with search depth:
+The no overlapping movement authorities safety property was verified using time bounded model checking over the modified realistic pentagon case study with a track segment length of 25000,  segment length of 5000 and train speeds of 70 and 120.  We then applied the LTL model checker and verify this example so that a comparison can be performed between the two pentagon case studies in terms of verification difficulty. The following table shows how the difficulty of the model checking problem increases with search depth:
 \medskip
 \begin{center}
 \begin{tabular}{c | c | c} 
